# PracticaSemanal1

./: CMakeLists.txt
Practica/Archivos MD/: Actividad1.md  Actividad2.md  Practica_Semanal.md
Practica/PracticaSemanal1/: Animal.cpp  Animal.h  Mamifero.cpp  Mamifero.h  Perro.cpp  Perro.h  main.cpp
